--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,32 +2,22 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
-}
+@layer base{
+    *{
+        padding: 0px;
+        margin: 0px;
+        transition: all linear 0.1s;
+    }
+    html{
+        font-size: 10px;
+        scroll-behavior: smooth;
+    }
+    ::-webkit-scrollbar{
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-  }
-}
-
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
-}
-
-@layer utilities {
-  .text-balance {
-    text-wrap: balance;
-  }
+        display: none;
+    }
+    body{
+        width: 100%;
+        background-image: linear-gradient(to bottom, #fff, #e5ffe3);
+    }
 }
