--- a/src/app/styles/home.module.css
+++ b/src/app/styles/home.module.css
@@ -7,6 +7,10 @@
   flex-direction: column;
   align-items: center;
   justify-content: space-between;
+  z-index: 10000;
+  position: fixed;
+  top: 0;
+  left: 0;
 }
 .home_home_start__top__OWvhx__FFXGv {
   width: 100%;
@@ -74,6 +78,7 @@
   align-items: center;
   justify-content: center;
   padding: 0 2rem;
+  z-index: 10001;
 }
 .start__modal {
   width: 100%;
@@ -122,7 +127,7 @@
   color: #000;
   background: #cffa7c;
 }
-.signUpBtn:active{
+.signUpBtn:active {
   scale: 99%;
 }
 .lkgnsd {
@@ -130,7 +135,7 @@
   height: 4rem;
   border-radius: 20px;
 }
-.home{
+.home {
   width: 100%;
   height: 100vh;
   padding: 15rem 3rem 3rem 3rem;
@@ -140,4 +145,3 @@
   flex-direction: column;
   gap: 10rem;
 }
-
