--- a/src/app/styles/navbar.module.css
+++ b/src/app/styles/navbar.module.css
@@ -1,21 +1,23 @@
-.navbar{
-    width: 100%;
-    height: 10rem;
-    position: fixed;
-    top: 0;
-    left: 0;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    padding: 2rem;
+.navbar {
+  width: 100%;
+  height: 10rem;
+  position: fixed;
+  top: 0;
+  left: 0;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 2rem;
 }
-.navSvg{
-    background-position: center !important;
-    background-repeat: no-repeat !important;
-    background-size: cover !important;
+.navSvg {
+  background-position: center !important;
+  background-repeat: no-repeat !important;
+  background-size: cover !important;
+  width: 2.8rem;
+  height: 2.8rem;
 }
-.sfgf{
-    display: flex;
-    font-size: 1.4rem;
-    font-weight: 600;
+.sfgf {
+  display: flex;
+  font-size: 1.4rem;
+  font-weight: 600;
 }
