--- a/src/app/styles/home.module.css
+++ b/src/app/styles/home.module.css
@@ -137,11 +137,9 @@
 }
 .home {
   width: 100%;
-  height: 100vh;
-  padding: 15rem 3rem 3rem 3rem;
+  padding:3rem;
   background-image: linear-gradient(to bottom, #fff, #e5ffe3);
   display: flex;
   align-items: center;
   flex-direction: column;
-  gap: 10rem;
 }
