--- a/src/app/styles/navbar.module.css
+++ b/src/app/styles/navbar.module.css
@@ -1,13 +1,10 @@
 .navbar {
   width: 100%;
-  height: 10rem;
-  position: fixed;
-  top: 0;
-  left: 0;
+  height: 7rem;
   display: flex;
   align-items: center;
   justify-content: space-between;
-  padding: 2rem;
+  margin-bottom: 6rem;
 }
 .navSvg {
   background-position: center !important;
