--- a/src/app/styles/home.module.css
+++ b/src/app/styles/home.module.css
@@ -82,7 +82,6 @@
 }
 .start__modal {
   width: 100%;
-  height: 40rem;
   background: #ffffff;
   border-radius: 20px;
   display: flex;
@@ -103,6 +102,7 @@
   border: 0px;
   padding: 0 1.5rem;
   font-size: 1.7rem;
+  margin-bottom: 1rem;
 }
 .fsad:focus {
   outline: 1px solid #cffa7c;
