--- a/src/app/styles/timeline.module.css
+++ b/src/app/styles/timeline.module.css
@@ -15,7 +15,7 @@
   height: 8rem;
   border-radius: 20px 20px 0 0;
   border: solid 1px #e8e8ea;
-  background-color: #fff;
+  background-color: #f0f0f0;
   display: flex;
   align-items: center;
   justify-content: space-between;
